refactor(controller): complete Vert.x removal and migrate runtime to Java 25
Replace the remaining Vert.x runtime, HTTP, asynchronous execution, and test
infrastructure with Java 25 implementations while retaining the existing gRPC
transport.

- replace Vert.x HTTP server and client usage with the JDK HTTP stack
- replace Vert.x contexts, futures, promises, timers, and worker executors
- introduce JavaRuntime, Future, Promise, and WorkerExecutor abstractions
- use virtual threads for blocking and asynchronous operations
- preserve ordered execution through dedicated single-thread executors
- honour configured worker-pool sizes instead of using unbounded execution
- serialize file-backed Raft storage operations through its worker executor
- protect storage operations against concurrent close and invalid channel state
- make storage open and close operations deterministic and awaitable
- propagate exceptions thrown during asynchronous Raft node startup
- ensure every startup path completes or fails its returned future
- retain gRPC for Raft and distributed-state communication
- add bounded gRPC transport executors and explicit shutdown handling
- preserve the single-threaded Raft state-machine execution model
- propagate MDC and tracing context across asynchronous execution boundaries
- improve Raft lifecycle, election, replication, snapshot, and transport logging
- configure SLF4J/Logback console and rolling-file appenders
- standardize application log names and the central logs directory
- remove ANSI terminal control sequences from captured Maven test logs
- migrate relevant Vert.x JUnit tests to the Java runtime extension
- make asynchronous test setup and teardown wait for completion with timeouts
- assert asynchronous test completion before resource teardown
- add regression coverage for ordered execution, worker pools, lifecycle
  completion, storage shutdown, and asynchronous exception propagation
- remove obsolete workflow, integration-example, TransferJob, a